@@ -18,24 +18,22 @@
 package com.winterhavenmc.deathchest.commands;
 
 import com.winterhavenmc.deathchest.PluginMain;
-
+import com.winterhavenmc.deathchest.messages.MessageId;
+import com.winterhavenmc.deathchest.sounds.SoundId;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
-import com.winterhavenmc.deathchest.messages.MessageId;
-import com.winterhavenmc.deathchest.sounds.SoundId;
 
 import javax.annotation.Nonnull;
 import java.util.*;
 
 
-
 /**
  * A class that implements player commands for the plugin
  */
-public final class CommandManager implements CommandExecutor, TabCompleter {
-
+public final class CommandManager implements CommandExecutor, TabCompleter
+{
 	private final PluginMain plugin;
 	private final SubcommandRegistry subcommandRegistry = new SubcommandRegistry();
 
@@ -45,12 +43,14 @@ public final class CommandManager implements CommandExecutor, TabCompleter {
 	 *
 	 * @param plugin reference to plugin main class
 	 */
-	public CommandManager(final PluginMain plugin) {
+	public CommandManager(final PluginMain plugin)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		Objects.requireNonNull(plugin.getCommand("deathchest")).setExecutor(this);
 
 		// register subcommands
-		for (SubcommandType subcommandType : SubcommandType.values()) {
+		for (SubcommandType subcommandType : SubcommandType.values())
+		{
 			subcommandRegistry.register(subcommandType.create(plugin));
 		}
 
@@ -72,16 +72,17 @@ public final class CommandManager implements CommandExecutor, TabCompleter {
 	public List<String> onTabComplete(final @Nonnull CommandSender sender,
 	                                  final @Nonnull Command command,
 	                                  final @Nonnull String alias,
-	                                  final String[] args) {
-
+	                                  final String[] args)
+	{
 		// if more than one argument, use tab completer of subcommand
-		if (args.length > 1) {
-
+		if (args.length > 1)
+		{
 			// get subcommand from map
 			Subcommand subcommand = subcommandRegistry.getCommand(args[0]);
 
 			// if no subcommand returned from map, return empty list
-			if (subcommand == null) {
+			if (subcommand == null)
+			{
 				return Collections.emptyList();
 			}
 
@@ -97,30 +98,32 @@ public final class CommandManager implements CommandExecutor, TabCompleter {
 	/**
 	 * Command handler for DeathChest
 	 *
-	 * @param sender   the command sender
-	 * @param command  the command typed
-	 * @param label    the command label
-	 * @param args     Array of String - command arguments
+	 * @param sender  the command sender
+	 * @param command the command typed
+	 * @param label   the command label
+	 * @param args    Array of String - command arguments
 	 * @return boolean - always returns {@code true}, to suppress bukkit builtin help message
 	 */
 	@Override
 	public boolean onCommand(final @Nonnull CommandSender sender,
 	                         final @Nonnull Command command,
 	                         final @Nonnull String label,
-	                         final String[] args) {
-
+	                         final String[] args)
+	{
 		// convert args array to list
 		List<String> argsList = new LinkedList<>(Arrays.asList(args));
 
 		String subcommandName;
 
 		// get subcommand, remove from front of list
-		if (argsList.size() > 0) {
-			subcommandName = argsList.remove(0);
+		if (!argsList.isEmpty())
+		{
+			subcommandName = argsList.removeFirst();
 		}
 
 		// if no arguments, set command to help
-		else {
+		else
+		{
 			subcommandName = "help";
 		}
 
@@ -128,7 +131,8 @@ public final class CommandManager implements CommandExecutor, TabCompleter {
 		Subcommand subcommand = subcommandRegistry.getCommand(subcommandName);
 
 		// if subcommand is null, get help command from map
-		if (subcommand == null) {
+		if (subcommand == null)
+		{
 			subcommand = subcommandRegistry.getCommand("help");
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_INVALID_COMMAND).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
@@ -142,17 +146,19 @@ public final class CommandManager implements CommandExecutor, TabCompleter {
 	/**
 	 * Get matching list of subcommands for which sender has permission
 	 *
-	 * @param sender the command sender
+	 * @param sender      the command sender
 	 * @param matchString the string prefix to match against command names
 	 * @return List of String - command names that match prefix and sender has permission
 	 */
-	private List<String> matchingCommands(final CommandSender sender, final String matchString) {
-
+	private List<String> matchingCommands(final CommandSender sender, final String matchString)
+	{
 		List<String> returnList = new LinkedList<>();
 
-		for (String subcommand : subcommandRegistry.getNames()) {
+		for (String subcommand : subcommandRegistry.getNames())
+		{
 			if (sender.hasPermission("deathchest." + subcommand)
-					&& subcommand.startsWith(matchString.toLowerCase())) {
+					&& subcommand.startsWith(matchString.toLowerCase()))
+			{
 				returnList.add(subcommand);
 			}
 		}
