@@ -18,10 +18,10 @@
 package com.winterhavenmc.deathchest.commands;
 
 import com.winterhavenmc.deathchest.PluginMain;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandSender;
 import com.winterhavenmc.deathchest.messages.MessageId;
 import com.winterhavenmc.deathchest.sounds.SoundId;
+import org.bukkit.command.Command;
+import org.bukkit.command.CommandSender;
 
 import javax.annotation.Nonnull;
 import java.util.LinkedList;
@@ -32,18 +32,20 @@ import java.util.Objects;
 /**
  * Class that implements the help subcommand. Displays help and usage for plugin subcommands.
  */
-final class HelpCommand extends SubcommandAbstract {
-
+final class HelpCommand extends SubcommandAbstract
+{
 	private final PluginMain plugin;
 	private final SubcommandRegistry subcommandRegistry;
 
 
 	/**
 	 * Class constructor
-	 * @param plugin reference to the plugin main class
+	 *
+	 * @param plugin             reference to the plugin main class
 	 * @param subcommandRegistry reference to the subcommand registry
 	 */
-	HelpCommand(final PluginMain plugin, final SubcommandRegistry subcommandRegistry) {
+	HelpCommand(final PluginMain plugin, final SubcommandRegistry subcommandRegistry)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		this.subcommandRegistry = Objects.requireNonNull(subcommandRegistry);
 		this.name = "help";
@@ -57,15 +59,18 @@ final class HelpCommand extends SubcommandAbstract {
 	public List<String> onTabComplete(final @Nonnull CommandSender sender,
 	                                  final @Nonnull Command command,
 	                                  final @Nonnull String alias,
-	                                  final String[] args) {
-
+	                                  final String[] args)
+	{
 		List<String> returnList = new LinkedList<>();
 
-		if (args.length == 2) {
-			for (String subcommand : subcommandRegistry.getNames()) {
+		if (args.length == 2)
+		{
+			for (String subcommand : subcommandRegistry.getNames())
+			{
 				if (sender.hasPermission("deathchest." + subcommand)
 						&& subcommand.startsWith(args[1].toLowerCase())
-						&& !subcommand.equalsIgnoreCase("help")) {
+						&& !subcommand.equalsIgnoreCase("help"))
+				{
 					returnList.add(subcommand);
 				}
 			}
@@ -76,23 +81,25 @@ final class HelpCommand extends SubcommandAbstract {
 
 
 	@Override
-	public boolean onCommand(final CommandSender sender, final List<String> args) {
-
+	public boolean onCommand(final CommandSender sender, final List<String> args)
+	{
 		// if command sender does not have permission to display help, output error message and return true
-		if (!sender.hasPermission("deathchest.help")) {
+		if (!sender.hasPermission("deathchest.help"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_HELP_PERMISSION).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
 		}
 
 		// if no arguments, display usage for all commands
-		if (args.size() == 0) {
+		if (args.isEmpty())
+		{
 			displayUsageAll(sender);
 			return true;
 		}
 
 		// get subcommand name
-		String subcommandName = args.get(0);
+		String subcommandName = args.getFirst();
 		displayHelp(sender, subcommandName);
 		return true;
 	}
@@ -101,22 +108,24 @@ final class HelpCommand extends SubcommandAbstract {
 	/**
 	 * Display help message and usage for a command
 	 *
-	 * @param sender the command sender
+	 * @param sender      the command sender
 	 * @param commandName the name of the command for which to show help and usage
 	 */
-	void displayHelp(final CommandSender sender, final String commandName) {
-
+	void displayHelp(final CommandSender sender, final String commandName)
+	{
 		// get subcommand from map by name
 		Subcommand subcommand = subcommandRegistry.getCommand(commandName);
 
 		// if subcommand found in map, display help message and usage
-		if (subcommand != null) {
+		if (subcommand != null)
+		{
 			plugin.messageBuilder.compose(sender, subcommand.getDescription()).send();
 			subcommand.displayUsage(sender);
 		}
 
 		// else display invalid command help message and usage for all commands
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_HELP_INVALID).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
 			displayUsageAll(sender);
@@ -129,12 +138,14 @@ final class HelpCommand extends SubcommandAbstract {
 	 *
 	 * @param sender the command sender
 	 */
-	void displayUsageAll(final CommandSender sender) {
-
+	void displayUsageAll(final CommandSender sender)
+	{
 		plugin.messageBuilder.compose(sender, MessageId.COMMAND_HELP_USAGE).send();
 
-		for (String subcommandName : subcommandRegistry.getNames()) {
-			if (subcommandRegistry.getCommand(subcommandName) != null) {
+		for (String subcommandName : subcommandRegistry.getNames())
+		{
+			if (subcommandRegistry.getCommand(subcommandName) != null)
+			{
 				subcommandRegistry.getCommand(subcommandName).displayUsage(sender);
 			}
 		}
