@@ -34,8 +34,8 @@ import java.util.*;
 /**
  * Class that implements the list subcommand. Displays a list of deployed death chests.
  */
-final class ListCommand extends SubcommandAbstract {
-
+final class ListCommand extends SubcommandAbstract
+{
 	private final PluginMain plugin;
 
 
@@ -44,22 +44,25 @@ final class ListCommand extends SubcommandAbstract {
 	 *
 	 * @param plugin reference to plugin main class
 	 */
-	ListCommand(final PluginMain plugin) {
+	ListCommand(final PluginMain plugin)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		this.name = "list";
-		this.usageString ="/deathchest list [page]";
+		this.usageString = "/deathchest list [page]";
 		this.description = MessageId.COMMAND_HELP_LIST;
 		this.maxArgs = 2;
 	}
 
 
 	@Override
-	public void displayUsage(final CommandSender sender) {
-
-		if (sender.hasPermission("deathchest.list.other")) {
+	public void displayUsage(final CommandSender sender)
+	{
+		if (sender.hasPermission("deathchest.list.other"))
+		{
 			sender.sendMessage("/deathchest list [username] [page]");
 		}
-		else {
+		else
+		{
 			sender.sendMessage(getUsage());
 		}
 	}
@@ -69,16 +72,19 @@ final class ListCommand extends SubcommandAbstract {
 	public List<String> onTabComplete(final @Nonnull CommandSender sender,
 	                                  final @Nonnull Command command,
 	                                  final @Nonnull String alias,
-	                                  final String[] args) {
-
+	                                  final String[] args)
+	{
 		// initialize return list
 		final List<String> returnList = new LinkedList<>();
 
-		if (args.length == 2) {
-			if (sender.hasPermission("deathchest.list.other")) {
+		if (args.length == 2)
+		{
+			if (sender.hasPermission("deathchest.list.other"))
+			{
 				// get map of chest ownerUUID,name from all current chests
 				Map<UUID, String> chestOwners = new HashMap<>();
-				for (DeathChest deathChest : plugin.chestManager.getAllChests()) {
+				for (DeathChest deathChest : plugin.chestManager.getAllChests())
+				{
 					chestOwners.put(deathChest.getOwnerUid(),
 							plugin.getServer().getOfflinePlayer(deathChest.getOwnerUid()).getName());
 				}
@@ -90,17 +96,19 @@ final class ListCommand extends SubcommandAbstract {
 	}
 
 	@Override
-	public boolean onCommand(final CommandSender sender, final List<String> args) {
-
+	public boolean onCommand(final CommandSender sender, final List<String> args)
+	{
 		// if command sender does not have permission to list death chests, output error message and return true
-		if (!sender.hasPermission("deathchest.list")) {
+		if (!sender.hasPermission("deathchest.list"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_LIST_PERMISSION).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
 		}
 
 		// check if max args exceeded
-		if (args.size() > this.getMaxArgs()) {
+		if (args.size() > this.getMaxArgs())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_ARGS_COUNT_OVER).send();
 			displayUsage(sender);
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
@@ -112,7 +120,8 @@ final class ListCommand extends SubcommandAbstract {
 
 		// if sender is player, cast sender to player; else player is null
 		Player player = null;
-		if (sender instanceof Player) {
+		if (sender instanceof Player)
+		{
 			player = (Player) sender;
 		}
 
@@ -123,31 +132,40 @@ final class ListCommand extends SubcommandAbstract {
 		boolean displayNames = true;
 
 		// if no target player entered
-		if (passedPlayerName.isEmpty()) {
+		if (passedPlayerName.isEmpty())
+		{
 			// if sender is a player, add all of player's chests to display list
-			if (sender instanceof Player) {
+			if (sender instanceof Player)
+			{
 				displayRecords = getChestsForPlayer(player);
 				displayNames = false;
 			}
 			// else add all chests to display list
-			else {
+			else
+			{
 				displayRecords = new LinkedList<>(plugin.chestManager.getAllChests());
 			}
 		}
 
-		else {
+		else
+		{
 			// if player has deathchest.list.other permission...
-			if (sender.hasPermission("deathchest.list.other")) {
+			if (sender.hasPermission("deathchest.list.other"))
+			{
 
 				// if wildcard character entered, add all chest records to display list
-				if (passedPlayerName.equals("*")) {
+				if (passedPlayerName.equals("*"))
+				{
 					displayRecords = new LinkedList<>(plugin.chestManager.getAllChests());
 				}
 
 				// else match chest records to entered target player name prefix
-				else {
-					for (DeathChest deathChest : plugin.chestManager.getAllChests()) {
-						if (deathChest.getOwnerName().toLowerCase().startsWith(passedPlayerName.toLowerCase())) {
+				else
+				{
+					for (DeathChest deathChest : plugin.chestManager.getAllChests())
+					{
+						if (deathChest.getOwnerName().toLowerCase().startsWith(passedPlayerName.toLowerCase()))
+						{
 							displayRecords.add(deathChest);
 						}
 					}
@@ -155,7 +173,8 @@ final class ListCommand extends SubcommandAbstract {
 			}
 
 			// else send permission denied message and return true
-			else {
+			else
+			{
 				plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_LIST_OTHER_PERMISSION).send();
 				plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 				return true;
@@ -163,7 +182,8 @@ final class ListCommand extends SubcommandAbstract {
 		}
 
 		// if display list is empty, output list empty message and return
-		if (displayRecords.isEmpty()) {
+		if (displayRecords.isEmpty())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.LIST_EMPTY).send();
 			return true;
 		}
@@ -173,7 +193,8 @@ final class ListCommand extends SubcommandAbstract {
 
 		// get list page size from configuration
 		int itemsPerPage = plugin.getConfig().getInt("list-page-size-player");
-		if (sender instanceof ConsoleCommandSender) {
+		if (sender instanceof ConsoleCommandSender)
+		{
 			itemsPerPage = plugin.getConfig().getInt("list-page-size-console");
 		}
 
@@ -182,9 +203,11 @@ final class ListCommand extends SubcommandAbstract {
 
 		// get page count
 		int pageCount = ((displayRecords.size() - 1) / itemsPerPage) + 1;
-		if (page > pageCount) {
+		if (page > pageCount)
+		{
 			page = pageCount;
 		}
+
 		int startIndex = ((page - 1) * itemsPerPage);
 		int endIndex = Math.min((page * itemsPerPage), displayRecords.size());
 
@@ -195,18 +218,20 @@ final class ListCommand extends SubcommandAbstract {
 		// display list header
 		displayListHeader(sender, page, pageCount);
 
-		for (DeathChest deathChest : displayRange) {
-
+		for (DeathChest deathChest : displayRange)
+		{
 			// increment list counter
 			listCount++;
 
 			String ownerName = "-";
-			if (deathChest.hasValidOwnerUid()) {
+			if (deathChest.hasValidOwnerUid())
+			{
 				ownerName = plugin.getServer().getOfflinePlayer(deathChest.getOwnerUid()).getName();
 			}
 
 			String killerName = "-";
-			if (deathChest.hasValidKillerUid()) {
+			if (deathChest.hasValidKillerUid())
+			{
 				killerName = plugin.getServer().getOfflinePlayer(deathChest.getKillerUid()).getName();
 			}
 
@@ -215,7 +240,8 @@ final class ListCommand extends SubcommandAbstract {
 			Long ProtectionTimeMillis = deathChest.getProtectionTime() - System.currentTimeMillis();
 
 			// if passedPlayerName is wildcard, display LIST_ITEM_ALL
-			if (displayNames) {
+			if (displayNames)
+			{
 				plugin.messageBuilder.compose(sender, MessageId.LIST_ITEM_ALL)
 						.setMacro(Macro.ITEM_NUMBER, listCount)
 						.setMacro(Macro.LOCATION, deathChest.getLocation())
@@ -227,7 +253,8 @@ final class ListCommand extends SubcommandAbstract {
 						.setMacro(Macro.PROTECTION_DURATION_MINUTES, ProtectionTimeMillis)
 						.send();
 			}
-			else {
+			else
+			{
 				plugin.messageBuilder.compose(sender, MessageId.LIST_ITEM)
 						.setMacro(Macro.ITEM_NUMBER, listCount)
 						.setMacro(Macro.LOCATION, deathChest.getLocation())
@@ -248,11 +275,14 @@ final class ListCommand extends SubcommandAbstract {
 	}
 
 
-	private List<DeathChest> getChestsForPlayer(final Player player) {
+	private List<DeathChest> getChestsForPlayer(final Player player)
+	{
 		List<DeathChest> returnList = new LinkedList<>();
 
-		for (DeathChest deathChest : plugin.chestManager.getAllChests()) {
-			if (deathChest.getOwnerUid().equals(player.getUniqueId())) {
+		for (DeathChest deathChest : plugin.chestManager.getAllChests())
+		{
+			if (deathChest.getOwnerUid().equals(player.getUniqueId()))
+			{
 				returnList.add(deathChest);
 			}
 		}
@@ -260,7 +290,8 @@ final class ListCommand extends SubcommandAbstract {
 	}
 
 
-	private void displayListHeader(final CommandSender sender, final int page, final int pageCount) {
+	private void displayListHeader(final CommandSender sender, final int page, final int pageCount)
+	{
 		// display list header
 		plugin.messageBuilder.compose(sender, MessageId.LIST_HEADER)
 				.setMacro(Macro.PAGE_NUMBER, page)
@@ -269,7 +300,8 @@ final class ListCommand extends SubcommandAbstract {
 	}
 
 
-	private void displayListFooter(final CommandSender sender, final int page, final int pageCount) {
+	private void displayListFooter(final CommandSender sender, final int page, final int pageCount)
+	{
 		// display list footer
 		plugin.messageBuilder.compose(sender, MessageId.LIST_FOOTER)
 				.setMacro(Macro.PAGE_NUMBER, page)
@@ -277,31 +309,40 @@ final class ListCommand extends SubcommandAbstract {
 				.send();
 	}
 
-	private String getNameFromArgs(final List<String> args) {
-
-		if (args.size() > 0) {
-			if (!isNumeric(args.get(0))) {
-				return args.get(0);
+	private String getNameFromArgs(final List<String> args)
+	{
+		if (!args.isEmpty())
+		{
+			if (!isNumeric(args.getFirst()))
+			{
+				return args.getFirst();
 			}
 		}
 		return "";
 	}
 
-	private int getPageFromArgs(final List<String> args) {
-
+	private int getPageFromArgs(final List<String> args)
+	{
 		int returnInt = 1;
 
-		if (args.size() == 1) {
-			try {
-				returnInt = Integer.parseInt(args.get(0));
-			} catch (NumberFormatException nfe) {
+		if (args.size() == 1)
+		{
+			try
+			{
+				returnInt = Integer.parseInt(args.getFirst());
+			} catch (NumberFormatException nfe)
+			{
 				// not a number
 			}
 		}
-		else if (args.size() == 2) {
-			try {
+		else if (args.size() == 2)
+		{
+			try
+			{
 				returnInt = Integer.parseInt(args.get(1));
-			} catch (NumberFormatException nfe) {
+			}
+			catch (NumberFormatException nfe)
+			{
 				// not a number
 			}
 		}
@@ -309,16 +350,20 @@ final class ListCommand extends SubcommandAbstract {
 	}
 
 
-	private boolean isNumeric(final String strNum) {
-
+	private boolean isNumeric(final String strNum)
+	{
 		// if string is null, return false
-		if (strNum == null) {
+		if (strNum == null)
+		{
 			return false;
 		}
 
-		try {
+		try
+		{
 			Integer.parseInt(strNum);
-		} catch (NumberFormatException nfe) {
+		}
+		catch (NumberFormatException nfe)
+		{
 			return false;
 		}
 		return true;
